--- a/css/style.css
+++ b/css/style.css
@@ -41,22 +41,13 @@ main header {
 	/*section요소와 aside팝업요소보다 위에 배치하기위해 3 지정*/
 }
 
-main header h1 {
-	font-size: 24px;
+main header h1 span {
+	font: normal 24px "Alegreya Sans SC";
 	color: #fff;
 }
 
-main header h1 i {
-	font-size: 5vw;
-	margin-bottom: 15px;
-}
-
-main header h1 span {
-	font: normal 0.8vw/1 "arial";
-}
-
 main header address {
-	font: normal 11px/1.2 "arial";
+	font: normal 1.5vh "arial";
 	color: #888;
 }
 
@@ -114,7 +105,7 @@ main section article .inner .txt {
 }
 
 main section article .inner .txt h2 {
-	font: normal 2vw/1 "Alegreya Sans SC";
+	font: normal 2vw "Alegreya Sans SC";
 	color: #fff;
 	margin-bottom: 40px;
 	padding-top: 70px;
@@ -134,7 +125,7 @@ main section article .inner .txt h2::after {
 }
 
 main section article .inner .txt p {
-	font: 14px/1.4 "arial";
+	font: 14px "arial";
 	color: #999;
 }
 
@@ -228,13 +219,13 @@ main aside .txt {
 }
 
 main aside .txt h1 {
-	font: normal 6vw/1 "Alegreya Sans SC";
+	font: normal 6vw "Alegreya Sans SC";
 	color: #ddd;
 	margin-bottom: 20px;
 }
 
 main aside .txt p {
-	font: 1.1vw/1.3 "arial";
+	font: 1.1vw "arial";
 	color: #666;
 	margin-bottom: 60px;
 }
